# rust_client_server

./: .env  .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: main.rs
migrations/2018-04-16-172431_create_items/: up.sql
src/: main.rs  schema.rs
templates/: index.html.hbs
todomvc_client/: Cargo.toml
todomvc_models/: Cargo.toml
todomvc_models/src/: lib.rs
