[package]
name = "todomvc"
version = "0.1.0"
authors = ["bobbywang"]

[dependencies]
rocket = "0.3.8"
rocket_codegen = "0.3.8"
serde = "1.0.38"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"
dotenv_codegen = "0.11.0"
todomvc_models = { path = "./todomvc_models" }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "tera_templates", "json"]